crates/vihaco-parser/tests/compile_errors/pattern_leading_space.stderr
error: invalid pattern: found ' ' expected ''', '$', '`', or end of input
 --> tests/compile_errors/pattern_leading_space.rs:9:17
  |
9 |     #[pattern = " 'load"]
  |                 ^^^^^^^^
